--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,4 +7,5 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - uses: ./action-a
-        with: MY_NAME: "devOps"
+        with: 
+          MY_NAME: "devOps"
